Added Activities & TimeSlices API

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+<%= link_to 'Projects', projects_path %>
+<%= link_to 'Time Lapse', time_slices_path %>
+
 <%= yield %>
 
 </body>
