--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,20 @@
 </head>
 <body>
 
-<%= link_to 'Projects', projects_path %>
-<%= link_to 'Time Lapse', time_slices_path %>
+  <div class="container">
+    <div class="masthead">
+      <h3 class="text-muted">Backbone</h3>
+      <ul class="nav nav-justified">
+        <li><a href="">Dashboard</a></li>
+        <li><%= link_to 'Projects', projects_path %></li>
+        <li><%= link_to 'Time Lapse', time_slices_path %></li>
+        <li><a href="">Billing</a></li>
+      </ul>
+    </div>
 
-<%= yield %>
+
+    <%= yield %>
+  </div>
 
 </body>
 </html>
