--- a/app/views/time_slices/index.html.slim
+++ b/app/views/time_slices/index.html.slim
@@ -4,6 +4,7 @@ div ng-controller="TimeSliceCtrl"
   table class="table table-striped table-hover" id="time-slices"
     thead
       tr
+        th Date
         th Project
         th Duration
         th Activity
@@ -13,6 +14,8 @@ div ng-controller="TimeSliceCtrl"
 
       tr 
         form ng-submit="addTimeSlice()"
+          td 
+            input type="date" ng-model="newTimeSlice.day" 
           td 
             select ng-model="newTimeSlice.project_id" ng-options="project.id as project.name for project in projects"
           td 
@@ -25,6 +28,11 @@ div ng-controller="TimeSliceCtrl"
             input id='new-time-slice-submit' type="submit" value="Add" class="btn btn-success btn-sm"
 
       tr class="time-slice" ng-repeat="timeslice in timeslices" bb-item-edit=""
+        td 
+          .day.bb-show
+            '{{timeslice.day}}
+          .day.bb-edit
+            input type="date" ng-model="timeslice.day" 
         td 
           .project.bb-show
             '{{ projectName(timeslice.project_id) }}
