Set up the templates into pipeline

--- a/app/views/invoices/index.html.slim
+++ b/app/views/invoices/index.html.slim
@@ -1,24 +1,1 @@
-.head
-  h1 Factures
-  .actions
-    a.btn.btn-primary.btn-lg id='new-invoice' href='#' Nouvelle facture
-.row.header
-  .col-sm-2.col-xs-3.date Date
-  .col-sm-4.col-xs-6.customer Client
-  .col-sm-2.col-xs-3.total-duty Montant HT
-  .col-sm-4.col-xs-12.action Action 
-.row
-  .col-sm-2.col-xs-3.date 02/11/2014
-  .col-sm-4.col-xs-6.customer Azur Plongée
-  .col-sm-2.col-xs-3.total-duty 3.234,56€
-  .col-sm-4.col-xs-12.action Télécharger - Voir - Envoyer 
-.row
-  .col-sm-2.col-xs-3 02/11/2014
-  .col-sm-4.col-xs-6 Campus ID
-  .col-sm-2.col-xs-3 13.234,56€
-  .col-sm-4.col-xs-12 Télécharger - Voir - Envoyer 
-.row
-  .col-sm-2.col-xs-3 02/11/2014
-  .col-sm-4.col-xs-6 Webportage
-  .col-sm-2.col-xs-3 35.234,56€
-  .col-sm-4.col-xs-12 Télécharger - Voir - Envoyer 
+div ng-view=""
