Added customer in new invoice

--- a/app/assets/templates/invoices/new.html.slim
+++ b/app/assets/templates/invoices/new.html.slim
@@ -3,7 +3,10 @@
   .actions
     a.btn.btn-primary.btn-lg id='new-invoice' href='#/invoices/' Liste
 
-form ng-submit="addTimeSlice()"
-  input id='invoice-reference' type="text" ng-model="invoice.duration" 
-  input id='invoice-date' type="text" ng-model="invoice.date" 
-  select id='invoice-payment-term' ng-model="invoice.payment_term" ng-options="payment_term.id as payment_term.label for payment_term in payment_terms"
+form ng-submit="addTimeSlice()" class="form invoice"
+  .infos
+    input id='invoice-reference' type="text" ng-model="invoice.duration" 
+    input id='invoice-date' type="text" ng-model="invoice.date" 
+    select id='invoice-payment-term' ng-model="invoice.payment_term" ng-options="payment_term.id as payment_term.label for payment_term in payment_terms"
+  .customer
+    select id='invoice-customer' ng-model="invoice.customer" ng-options="customer.id as customer.name for customer in customers"
