Almost done with new invoice

--- a/app/assets/stylesheets/invoices.css.scss
+++ b/app/assets/stylesheets/invoices.css.scss
@@ -49,6 +49,11 @@
   .body {
     border-bottom: 1px solid #ddd;
   }
+  .actions {
+    a.btn {
+      margin-right: 10px;
+    }
+  }
 }
 
 @media (max-width: 768px) { 
