Added edit feature

--- a/app/assets/javascripts/main.js.coffee.erb
+++ b/app/assets/javascripts/main.js.coffee.erb
@@ -8,4 +8,7 @@
     .when('/invoices/new',
       templateUrl: "/assets/invoices/new.html",
       controller: "InvoiceCtrl")
+    .when('/invoices/:id',
+      templateUrl: "/assets/invoices/new.html",
+      controller: "InvoiceCtrl")
 )
