--- a/app/views/static_pages/index.html.slim
+++ b/app/views/static_pages/index.html.slim
@@ -1,2 +1,5 @@
-h1 Hello World!
-p Please sign in
+- if current_user 
+  h1 Bonjour #{current_user.first_name}
+- else
+  h1 Hello World!
+  p Please sign in
