Added user right management on invoices

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,7 +15,7 @@ body
         ul class="nav nav-justified"
           li
             a href="" onclick="alert('Soon to come!')" Dashboard
-          - if current_user && (current_user.email == "benoit@agilidee.com")
+          - if current_user && (current_user.email.include? "agilidee.com")
             li
               = link_to 'Projects', projects_path 
             li
