--- a/app/assets/stylesheets/invoices.css.scss
+++ b/app/assets/stylesheets/invoices.css.scss
@@ -33,6 +33,9 @@
 }
 
 .invoice {
+  .date {
+    font-size: 12px
+  }
   .infos {
     float: left;
     width: 50%;
@@ -57,8 +60,15 @@
   }
 }
 
+// hide action when not in large mode
+@media (max-width: 1200px) {
+  .row.header .action {
+    display: none;
+  }
+}
+
 @media (max-width: 768px) { 
-  .row.header{
+  .row.header {
     .action, .line-unit, .line-unit-price, .line-total, .line-quantity {
       display: none;
     }
