--- a/app/assets/templates/invoices/new.html.slim
+++ b/app/assets/templates/invoices/new.html.slim
@@ -101,7 +101,9 @@ form ng-submit="addTimeSlice()" class="form form-horizontal invoice" role="form"
       .col-sm-7
         .form-control-static.invoice-total-duty ng-bind="invoice.total_duty | euros"
     .form-group
-      label class='col-sm-5 control-label' TVA (20.0%)
+      label class='col-sm-3 control-label' TVA(%):
+      .col-sm-2
+          input.form-control id="vat-rate" type="number" step="0.1" min="0" max="100" ng-model="invoice.vat_rate"
       .col-sm-7
         .form-control-static.invoice-vat ng-bind="invoice.vat | euros"
     .form-group
